<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculate"
    android:background="@drawable/border"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <EditText

            android:id="@+id/num1"
            style="@style/box_text_regster"
            android:hint="@string/first_number"
            android:inputType="number"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <EditText

            android:id="@+id/num2"
            style="@style/box_text_regster"
            android:hint="@string/second_number"
            android:inputType="number"
            android:textColorHint="#757575" />

        <TextView

            android:id="@+id/sum"
            style="@style/box_text_regster"
           android:text="@string/total"
            android:gravity="center"
            android:textSize="25sp"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_sum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/button_color"
            android:text="@string/sum" />

</LinearLayout>
</LinearLayout>