<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/vig"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="cursive"
            android:text="@string/healthic"
            android:textColor="@color/green"
            android:textSize="@dimen/Title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_btn"
        android:elevation="50dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="40dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/logine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:text="@string/login"
            android:textColor="@color/green"


            android:textSize="70sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:layout_width="265dp"
                android:layout_height="50dp"

                android:background="@drawable/shadow"
                android:drawableLeft="@drawable/user_custom"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingStart="@dimen/start_space_text"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
              />

            <EditText
                android:layout_width="265dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/shadow"
                android:drawableLeft="@drawable/lock_custom"
                android:drawablePadding="10dp"
                android:hint="Password"

                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="#757575" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/button_color"

                android:text="login"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I'm not a member Sign in"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>